2009-08-25  Felix Riemann  <friemann@gnome.org>

	* plugins/exif-display/eog-exif-display-plugin.c:
	Only draw to the GtkDrawingArea when it is realized. Fixes crashes
	when multiple plugins use the sidebar. Fixes bug #593003.

2009-08-24  Felix Riemann  <friemann@gnome.org>

	* NEWS: Prepare for initial release.

2009-08-24  Felix Riemann  <friemann@gnome.org>

	* plugins/champlain/eog-champlain-plugin.c (impl_activate):
	Place the champlain widget inside a GtkFrame instead of a viewport.
	This is just a temporary workaround until there is a solution for the
	X errors mentioned in bug 590692.

2009-08-24  Felix Riemann  <friemann@gnome.org>

	* configure.ac:
	* plugins/champlain/eog-champlain-plugin.c:
	Update champlain plugin to work with libchamplain-0.3 and clutter-1.0.
	Fixes bug #588397 (Pierre-Luc Beaudoin).

2009-08-12  Felix Riemann  <friemann@gnome.org>

	* plugins/exif-display/eog-exif-display-plugin.c (impl_activate),
	(impl_create_config_dialog):
	Set translation domain on GtkBuilder instances or else UI strings are
	only partially translated because the strings are searched for in
	eog's translations.

2009-08-12  Felix Riemann  <friemann@gnome.org>

	* plugins/exif-display/eog-exif-display-plugin.c:
	* plugins/exif-display/exif-display.ui:
	Add description tag to the list of displayed exif tags and improve
	widget alignment (Jonathan Michalon).

2009-08-11  Felix Riemann  <friemann@gnome.org>

	* configure.ac:
	* plugins/*/Makefile.am:
	Add support for Automake 1.11's silent build rules.

2009-07-18  Felix Riemann  <friemann@gnome.org>

	* configure.ac: Raise gtk+ dependency to at least 2.12.

2009-07-18  Felix Riemann  <friemann@gnome.org>

	* plugins/champlain/eog-champlain-plugin.c (impl_activate):
	Make the sidebar's page title translatable.

2009-06-27  Felix Riemann  <friemann@gnome.org>

	* plugins/exif-display/eog-exif-display-plugin.c:
	* plugins/slideshowshuffle/slideshowshuffle.py:
	Strip trailing whitespaces.
